gateway/argocd-gateway.yaml
#-------------------- istio gateway -------------------#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-argocd-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
       mode: PASSTHROUGH
    hosts:
    - "argocd.aws.s12n.tk"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-argocd-vs
spec:
  hosts:
  - "argocd.aws.s12n.tk"
  gateways:
  - istio-argocd-gateway 
  tls:
  - match:
    - port: 443
      sniHosts:
      - argocd.aws.s12n.tk 
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
