gateway/k8s-gateway.yaml
#-------------------- istio gateway -------------------#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-dashboard-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
       mode: PASSTHROUGH
    hosts:
    - "dashboard.k8s.aws.s12n.tk"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-dashboard-vs
spec:
  hosts:
  - "dashboard.k8s.aws.s12n.tk"
  gateways:
  - istio-dashboard-gateway 
  tls:
  - match:
    - port: 443
      sniHosts:
      - dashboard.k8s.aws.s12n.tk 
    route:
    - destination:
        host: kubernetes-dashboard.kube-system.svc.cluster.local
